# rich-presence-wrapper

./: .gitignore  Cargo.toml  default.nix  flake.nix  rust-toolchain.toml  shell.nix
nix/: devshell.nix  helix.nix  home-module.nix  package.nix  zed-editor.nix
src/: cli.rs  config.rs  discord.rs  helix.rs  ipc.rs  main.rs  main.rs.old  program.rs  rpc.rs  util.rs
src/app/: generic_editor.rs  helix.rs  mod.rs  mpris_bridge.rs  zed.rs
src/app/common/: generic_editor.rs  mod.rs
src/app/mpris_bridge/: metadata.rs  mod.rs  pipeline.rs
src/app/mpris_bridge/modules/: auto_stop.rs  external.rs  filter.rs  fixup_track_id.rs  mod.rs  rewrite.rs  script.rs  track_position.rs
src/config/: cli.rs  file.rs  mod.rs
src/platform/: darwin.rs  linux.rs  mod.rs
src/program/: args.rs  helix.rs  mod.rs  waiter.rs  zed.rs
src/program/impls/: generic_editor.rs  helix.rs  mod.rs  zed.rs
