[package]
name = "rich-presence-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = { version = "6" }
discord-rich-presence = { version = "1.1.0" }
eyre = { version = "0.6" }
html-escape = { version = "0.2", optional = true }
module = { version = "0.3", features = ["derive", "serde"] }
module-util = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "1" }
tokio = { version = "1", features = ["macros", "sync", "time", "process", "rt"] }
regex = { version = "1", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
magic-args = "0.1.1"
fxhash = "0.2.1"

[features]
default = [
  "helix",
  "zed",
  "mpris-bridge"
]

helix = []
zed = []
mpris-bridge = ["dep:html-escape", "dep:serde_json", "dep:regex", "tokio/io-util"]
