[package]
name = "rich-presence-wrapper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
dirs = { version = "6" }
discord-rich-presence = { version = "1.1.0" }
eyre = { version = "0.6" }
fxhash = { version = "0.2", optional = true }
html-escape = { version = "0.2", optional = true }
magic-args = { version = "0.1" }
module = { version = "0.3", features = ["derive", "serde"] }
module-util = { version = "0.3", features = ["serde"] }
regex = { version = "1" }
rune = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["macros", "sync", "time", "process", "rt"] }
toml = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[features]
default = [
  "helix",
  "zed",
  "mpris-bridge"
]

helix = []
zed = []
mpris-bridge = [
  "dep:fxhash",
  "dep:html-escape",
  "dep:rune",
  "dep:serde_json",
  "tokio/io-util"
]
